<resources>
    <string name="app_name">Ru-En Разговорник v2.0</string>
    <string name="inputWords">Поиск/Воспроизведение</string>
    <string name="categories">Категории</string>
    <string name="favorites">Избранное</string>
    <string name="title_activity_phrases">Фразы</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_phrase">Activity</string>
    <string name="title_activity_add_phrase">Добавление фразы</string>
    <string name="phrase">Фраза</string>
    <string name="transcription">Транскрипция</string>
    <string name="translate">Перевод</string>
    <string name="category">Категория</string>
    <string name="addPhrase">Добавить</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="DecriptionPhraseCard">contentDescriptionCard</string>
    <string name="PhraseHint">Фраза</string>
    <string name="TranscriptionHint">Транскрипция</string>
    <string name="TranslateHint">Перевод</string>
    <string name="searchPhraseHint">Введите фразу или перевод</string>
    <string name="searchPhraseTitle">Поиск фраз</string>
    <string name="title_activity_searchable">Результаты поиска</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deleteEdit">Редактировать/Удалить</string>
    <string name="editPhrase">Редактировать</string>
    <string name="deletePhrase">Удалить</string>
    <string name="DeletePhraseLabel">Удалить фразу?</string>
    <string name="DeletePhraseBody">Вы действительно хотите удалить фразу?</string>
    <string name="CancelDeletePhraseButton">ОТМЕНА</string>
    <string name="ConfirmDeletePhraseButton">УДАЛИТЬ</string>
    <string name="editPhraseHint">Фраза</string>
    <string name="editTranscriptionHint">Транскрипция</string>
    <string name="editTranslateHint">Перевод</string>
    <string name="acceptEditPhrase">Редактировать</string>
    <string name="cancel">Отмена</string>
    <string name="applicationName">Ru-En Разговорник</string>
    <string name="searchError">Введите фразу в строку поиска</string>
    <string name="noFavoritePhrasesHint">Ни одна фраза не добавлена в избранное</string>
    <string name="noOwnPhrasesHint">Вы ещё не добавили ни одной фразы</string>
    <string name="noPhrasesInCategoryHint">Нет фраз в этой категории</string>
</resources>
