<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEditPhrase"
            android:inputType="text"
            android:hint="@string/editPhraseHint"
            android:gravity="left" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEditTranscription"
            android:inputType="text"
            android:hint="@string/editTranscriptionHint"
            android:gravity="left"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEditTranslate"
            android:inputType="text"
            android:layout_marginTop="5dp"
            android:gravity="left"
            android:hint="@string/editTranslateHint" />
    </LinearLayout>

</LinearLayout>